--- a/_config.yml
+++ b/_config.yml
@@ -1,2 +1,4 @@
-# theme_style is default to 'light'
-theme_style: dark
+# Extensions
+## Plugins: http://hexo.io/plugins/
+## Themes: http://hexo.io/themes/
+theme: aero-dual
